update vs project with last renaming

--- a/VisualStudio_Dll/BelleLog/BelleLog.csproj
+++ b/VisualStudio_Dll/BelleLog/BelleLog.csproj
@@ -49,16 +49,17 @@
     <Compile Include="Scripts\Internal\DefaultLogFormatter.cs" />
     <Compile Include="Scripts\Internal\Editor\Console.cs" />
     <Compile Include="Scripts\Internal\Editor\ConsoleLogHandler.cs" />
+    <Compile Include="Scripts\Internal\Editor\CustomGUIStyle.cs" />
     <Compile Include="Scripts\Internal\Editor\Filter\CollapseLogFilter.cs" />
     <Compile Include="Scripts\Internal\Editor\Filter\LogFilterIndexer.cs" />
     <Compile Include="Scripts\Internal\Editor\Filter\PredicateLogFilter.cs" />
     <Compile Include="Scripts\Internal\Editor\ILogEntryContainer.cs" />
-    <Compile Include="Scripts\Internal\Editor\LogEntryContent.cs" />
+    <Compile Include="Scripts\Internal\Editor\LogEntryContentRenderer.cs" />
     <Compile Include="Scripts\Internal\Editor\LogEntryCounter.cs" />
     <Compile Include="Scripts\Internal\Editor\LogEntryRenderer.cs" />
-    <Compile Include="Scripts\Internal\Editor\LogEntryStackTrace.cs" />
-    <Compile Include="Scripts\Internal\Editor\SearchTab.cs" />
-    <Compile Include="Scripts\Internal\Editor\Table.cs" />
+    <Compile Include="Scripts\Internal\Editor\LogEntryStackTraceRenderer.cs" />
+    <Compile Include="Scripts\Internal\Editor\SearchTabRenderer.cs" />
+    <Compile Include="Scripts\Internal\Editor\TableRenderer.cs" />
     <Compile Include="Scripts\Internal\Editor\UnityEditorDebugLogHandler.cs" />
     <Compile Include="Scripts\Internal\Editor\UnityEditorInternal.cs" />
     <Compile Include="Scripts\Internal\Editor\VerticalSplit.cs" />
