--- a/VisualStudio_Dll/BelleLog/BelleLog.csproj
+++ b/VisualStudio_Dll/BelleLog/BelleLog.csproj
@@ -38,10 +38,10 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
     <Reference Include="UnityEditor">
-      <HintPath>..\..\..\..\..\..\..\..\Program Files\Unity_562p3\Editor\Data\Managed\UnityEditor.dll</HintPath>
+      <HintPath>References\Unity\UnityEditor.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine">
-      <HintPath>..\..\..\..\..\..\..\..\Program Files\Unity_562p3\Editor\Data\Managed\UnityEngine.dll</HintPath>
+      <HintPath>References\Unity\UnityEngine.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
